--- a/header.css
+++ b/header.css
@@ -5,9 +5,16 @@ header img {
 header {
     display: flex;
     justify-content: space-between;
-    height: 55px;
-    margin-left: 24px;
-    margin-right: 24px;
+    height: 57px;
+    padding-left: 24px;
+    padding-right: 24px;
+    border-bottom: 1px solid #cccccc;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: white;
 }
 
 .left-header,
@@ -24,4 +31,64 @@ header {
 
 .channel-picture {
     height: 32px;
+}
+
+.left-header {
+    flex-shrink: 0;
+}
+
+.middle-header {
+    width: 500px;
+    flex-shrink: 1;
+    gap: 0;
+    padding-right: 20px;
+    margin-left: 30px;
+}
+
+.search-bar {
+    flex: 1;
+    width: 0;
+    height: 40px;
+    border: 1px solid #cccccc;
+    margin-left: 15px;
+    box-shadow: inset 0px 1px 2px #eeeeee;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    padding-left: 12px;
+    font-size: 16px;
+    border-right: none;
+}
+
+input::placeholder {
+    font-size: 16px;
+    color: grey;
+}
+
+input:focus {
+    outline: none;
+    border: 1px solid blue;
+}
+
+
+.search-button {
+    width: 65px;
+    height: 40px;
+    border: 1px solid #cccccc;
+    padding-top: 5px;
+    background-color: #f7f7f7;
+}
+
+.voice-search-button{
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    border: none;
+    margin-left: 8px;
+    background-color: #f7f7f7;
+    padding-top: 5px;
+}
+
+.right-header {
+    flex-shrink: 0;
+    gap: 26px;
 }
