--- a/video.css
+++ b/video.css
@@ -1,38 +1,63 @@
 .video-tile {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 8px;
 }
 
 .video-info {
     display: flex;
-    gap: 10px;
+    gap: 12px;
 }
 
 .profile-photo {
-    height: 50px;
-    width: 50px;
+    height: 36px;
+    width: 36px;
     border-radius: 50px; 
 }
 
 .video-title {
-    font-size: 16px;
-    font-weight: 700;
+    font-size: 14px;
+    font-weight: 500;
     margin-bottom: 10px;
-    line-height: 25px;
+    line-height: 20px;
 }
 
 .video-author,
 .video-stats {
-    font-size: 13px;
+    font-size: 12px;
     color: rgb(97, 96, 96);
-    margin-bottom: 5px;
+    margin-bottom: 4px;
 }
 
 .video-preview {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    row-gap: 35px;
-    column-gap: 18px;
-    padding-top: 25px;
+    row-gap: 38px;
+    column-gap: 16px;
+    padding-top: 24px;
+    padding-left: 96px;
+    padding-right: 24px;
+    padding-bottom: 50px;
+    background-color:   #f9f9f9;
+}
+
+.time-stamp {
+    background-color: black;
+    color: white;
+    font-size: 12px;
+    font-weight: 500;
+    width: 38px;
+    padding: 4px;
+    border-radius: 2px;
+    text-align: center;
+    position: absolute;
+    top: 137px;
+    right: 0;
+    left: 254px;
+    bottom: 11px;
+    opacity: 0.9;
+}
+
+.video-stamp {
+    position: relative;
 }
