--- a/video.css
+++ b/video.css
@@ -41,6 +41,10 @@
     background-color:   #f9f9f9;
 }
 
+.video-stamp {
+    position: relative;
+}
+
 .time-stamp {
     background-color: black;
     color: white;
@@ -51,13 +55,66 @@
     border-radius: 2px;
     text-align: center;
     position: absolute;
-    top: 137px;
+    top: 80%;
     right: 0;
-    left: 254px;
-    bottom: 11px;
-    opacity: 0.9;
+    left: 85%;
+    bottom: 8%;
+    opacity: 0.9
 }
 
-.video-stamp {
-    position: relative;
+@media (min-width: 952px) and (max-width:1190px) {
+    .video-preview {
+        grid-template-columns: 1fr 1fr 1fr;
+    }   
+
+    .time-stamp {
+        bottom: 8%;
+    }
+}
+
+@media (min-width: 751px) and (max-width:951px) {
+    .video-preview {
+        grid-template-columns: 1fr 1fr;
+       
+    }
+
+    .time-stamp{
+        top: 82%;
+    }
+}
+
+@media (min-width: 652px) and (max-width: 750px) {     
+    .video-preview {
+        grid-template-columns: 1fr 1fr;
+      
+    }
+
+    .time-stamp {
+        top: 78%;
+    }   
+}
+
+@media (min-width: 502px) and (max-width: 651px) {
+    .video-preview {
+        grid-template-columns: 1fr;
+        
+    }
+
+    .time-stamp {
+        top: 83%;
+    }
+}
+
+@media (min-width: 0px) and (max-width: 501px) {
+    .video-preview {
+        grid-template-columns: 1fr;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 10px;
+        gap: 10px;
+    }
+
+    .time-stamp {
+        top: 84%;
+    }
 }
